- content-visibility: auto for list items, icon picker - rename tag fix - ignore some sentry errors

--- a/src/co/common/list/item.module.styl
+++ b/src/co/common/list/item.module.styl
@@ -8,6 +8,7 @@
     font-size: var(--primary-font-size)
     line-height: 2
     white-space: nowrap
+    content-visibility: auto
 
     &[disabled] {
         color: var(--disable-text-color)
