--- a/src/co/common/list/section.module.styl
+++ b/src/co/common/list/section.module.styl
@@ -6,6 +6,7 @@
 	color: var(--secondary-text-color)
 	display: flex
 	align-items: center
+    content-visibility: auto
 
 	&[disabled] {
         color: var(--disable-text-color)
