--- a/src/co/picker/icon/items.module.styl
+++ b/src/co/picker/icon/items.module.styl
@@ -16,6 +16,7 @@
     padding: var(--padding-medium)
 
     .icon {
+        content-visibility: auto
         text-align: center
         padding: var(--padding-mini)
         border-radius: var(--border-radius)
